After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755004 - Panel background image is not resized immediately on panel orientation or size change
Panel background image is not resized immediately on panel orientation or siz...
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-14 16:54 UTC by Balló György
Modified: 2015-11-02 00:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Balló György 2015-09-14 16:54:00 UTC
Steps to reproduce:

1. Set an image as panel background.

2. Change the panel orientation and/or size.

3. See that the image background is not resized with the panel, you'll see black background on the empty space.

Tested with current gnome-panel git master.
Comment 1 Alberts Muktupāvels 2015-10-13 00:17:35 UTC
What size image did you use? By default it will set image as background with no modifications. You might want to change image style from none to stretch or fit, but that is not possible from properties dialog...

none style image was not re-created when panel size was changed, this is now fixed. So if your image is large enough then there should not be empty black space.
Comment 2 Balló György 2015-11-02 00:38:13 UTC
I tested with a large image, and you fixed this problem. Thanks!