panel-background: retransform all style background images

https://bugzilla.gnome.org/show_bug.cgi?id=755004